# predict-obamacare-sentiment

./: README.md  pyproject.toml
Checkpoint 1/: yelp_sentiment_analysis.ipynb
Checkpoint 2/: Checkpoint_2.ipynb  sentimentalclassifer1&5.ipynb  sentimentalclassifier1to5stars.ipynb  sentimentclassifier.ipynb  yelp_sentiment_analysis_v2.ipynb
Checkpoint 3/: yelp_sentiment_analysis_v3.ipynb
Dashboard/: __main__.py  dashboard.py  inputs.py
Dashboard/Graphs/: graph_constructor.py
Dashboard/ML Models/: decision_tree.py  logistic_regression.py  naive_bayes.py  random_forest.py
Dashboard/load_and_clean/: tweet_preprocess.py  yelp_preprocess.py
Final Reports/: Classification Reports.ipynb  Logistic_Regression_hyperparameter_tuning.ipynb  Twtter Data Exploratory Analysis.ipynb  Yelp Review Sentiment Classification and Analysis.ipynb
Final Reports/Neural Network Notebooks/: NNL - even_distribution reviews.ipynb  NNL baseline with 1,2,3,4,5 stars.ipynb  NNL with 1&5 stars.ipynb  NNL with 1,3&5 stars.ipynb
