[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["Robert Surridge"]
readme = "README.md"
packages = [{include = "ml_project"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
sklearn = "^0.0.post5"
scikit-learn = "^1.2.2"
nltk = "^3.8.1"
wordcloud = "^1.9.2"
dash = "^2.10.0"
plotly = "^5.14.1"
dash-bootstrap-components = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
